--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  alexandermoore
 linkedin_username: alexandervmoore
-permalink: "/blog/:title"
+permalink: "/posts/:title"
 
 # Build settings
 theme: minima
