--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Alex's Website
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My personal website where I write about ML, CS, Math and anything else :)
+  My personal website where I write about various machine learning related things :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
